# SRATMWA

./: .gitignore  COMMAND.md  README.md
software/: README.md  config.py  pyproject.toml  requirements.txt  run.py  seed.py
software/app/: __init__.py  cli.py  models.py
software/app/routes/: assets.py  checklists.py  controls.py  dashboard.py  reports.py  risks.py  threats.py  views.py  vulnerabilities.py
software/frontend/static/: app.js  style.css
software/frontend/templates/: base.html  checklists.html  controls.html  index.html  reports.html  risks.html  threats.html  vulnerabilities.html
