[project]
name = "sratmwa"
version = "0.1.0"
description = "Security Risk Assessment and Threat Modeling of Web Applications"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.0.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.7",
    "Flask-CORS==4.0.1",
    "marshmallow==3.21.3",
    "python-dotenv==1.0.1",
    "Werkzeug==3.0.3",
]

[project.scripts]
init = "app.cli:init"
dev  = "app.cli:dev"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Install the app package; the project root (software/) is also added to
# sys.path in editable mode, making seed.py importable from app.cli.
packages = ["app"]
